force-app/main/default/objects/positions__c/positions__c.object-meta.xml
<CustomObject>
    <label>position</label>
    <nameField>
        <label>positions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>