force-app/main/default/objects/positions__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>pakistan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>