force-app/main/default/objects/positions__c/fields/Firstname__c.field-meta.xml
<CustomField>
    <fullName>Firstname__c</fullName>
    <label>Firstname</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>