force-app/main/default/objects/positions__c/fields/lookuplead__c.field-meta.xml
<CustomField>
    <fullName>lookuplead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>positions</relationshipLabel>
    <relationshipName>positions</relationshipName>
    <type>Lookup</type>
</CustomField>