force-app/main/default/objects/positions__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <label>Zipcode</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>